<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="ad_unit_id">ca-app-pub-7411607113782325/2906025298</string>
    <string name="app_name">CS16Client</string>
    <string name="defCmdArgs">-console -game cstrike -bots, etc</string>
    <string name="title_activity_launcher">CS16Client Launcher</string>
    <string name="launch_button">Launch cs16-client!</string>
    <string name="cmd_args_text">Command line arguments:</string>
    <string name="cmd_args_text2">"Don't touch if you don't know why you need this!"</string>
    <string name="not_found_msg">Nothing was found. Check your installation</string>
    <string name="not_found_title">Something got wrong...</string>
    <string name="not_implemented_msg">This feature is not implemented yet</string>
    <string name="not_implemented_title">Not implemented!</string>
    <string name="not_implemented_fully">This is not ready! Bugreports are not accepted when this feature is on.</string>
    <string name="zbot_on">ZBot Enabled</string>
    <string name="zbot_off">ZBot Disabled</string>
    <string name="yapb_on">YaPB Enabled</string>
    <string name="yapb_off">YaPB Disabled</string>
    <string name="czero_on">Condition Zero Enabled</string>
    <string name="czero_off">Condition Zero Disabled</string>
    <string name="xash_not_installed_title">No engine found</string>
    <string name="xash_not_installed_msg">To continue, you must install Xash3D engine on your device</string>
    <string name="install_xash">Install</string>
    <string name="cancel">Cancel</string>
    <string name="first_run_reminder_title">First run reminder</string>
    <string name="first_run_reminder_msg">Welcome to CS16Client! I just want to remind you that to play this game you must copy original Counter-Strike 1.6 files(only cstrike and valve folders) from your Steam installation of the game to your device. Good luck, have fun!</string>
    <string name="ok">OK!</string>
</resources>
