<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/layout_shortcut" android:background="#ff252525" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:background="#ff555555" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="5.0dip">
        <TextView android:gravity="center_vertical" android:id="@id/textView_tittle" android:background="#ff555555" android:clickable="true" android:layout_width="wrap_content" android:layout_height="50.0dip" android:singleLine="true" android:drawableLeft="@drawable/ic_launcher" android:drawablePadding="5.0dip" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="25.0sp" android:gravity="center_vertical" android:id="@id/textView_title" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="1.0dip" android:layout_marginBottom="1.0dip" android:text="@string/app_name" android:singleLine="true" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:background="#ff555555" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip" android:layout_weight="1.2">
        <ScrollView android:id="@id/scrollView2" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:background="#ff444444" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:weightSum="1.0">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView_args" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="1.0dip" android:text="@string/cmd_args_text" />
                <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView_args" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="1.0dip" android:text="@string/cmd_args_text2" />
                <EditText android:id="@id/cmdArgs" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:hint="@string/defCmdArgs" />
                <ToggleButton android:id="@id/use_zbot" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:textOn="@string/zbot_on" android:textOff="@string/zbot_off" android:text="nothing" />
                <ToggleButton android:id="@id/use_yapb" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:textOn="@string/yapb_on" android:textOff="@string/yapb_off" android:text="nothing" />
                <ToggleButton android:id="@id/enableczero" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:textOn="@string/czero_on" android:textOff="@string/czero_off" android:text="nothing" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <com.google.android.gms.ads.AdView android:layout_gravity="center" android:id="@id/adView" android:layout_width="fill_parent" android:layout_height="wrap_content" ads:adSize="BANNER" ads:adUnitId="@string/ad_unit_id" />
    <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:background="#ff444444" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginBottom="-20.0dip">
        <Button android:id="@id/button_launch" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:text="@string/launch_button">
            <requestFocus />
        </Button>
    </LinearLayout>
</LinearLayout>